# proyectoEOM

./: .gitignore  compose.prod.yml  compose.yml  fix_multiple_authors.py  main.py  pyproject.toml  stats.py  utils.py
Articles/: saveArticle.py  scrapArticle.py
Authors/: scrapAuthor.py
Autores/: Author.py  __init__.py  database.py  query.py  save.py  scrapAuthor.py
Places/: Place.py  __init__.py  queryPlace.py  savePlace.py  scrapPlace.py
Tags/: scrapTag.py
docs/: accesibilidad_web.md  casos_de_uso.md  color_e_imagen_marca.md  frontend-architecture.md  informe-layout-dag-explorer.md  plan_de_implementacion.md
docs/diagramas/: README-bd-eraser.md  classDiagram.cs  eom-modelo-entidad-relacion.eraser.dsl  eom-modelo-relacional.eraser.dsl  eom-schema-postgres-actual.sql  graph-node-enter-animation.d2  semantic-explorer-backend.dbml
my-video/src/: Composition.tsx  Root.tsx
my-video/src/gnosis-graph/: ArticleNodeVisual.tsx  BrutalistNode.tsx  GnosisGraphDemo.tsx  GnosisGraphPresentation.tsx  GraphEdges.tsx  GridBackground.tsx  Intro.tsx  MinimalNode.tsx  MinimalSidebar.tsx  QueryNodeVisual.tsx  camera.ts  duration.ts  randomTree.ts  theme.ts  util.ts
scrapper/: main.py  pyproject.toml
scripts/: backup-db.sh
web-semantic-explorer/: .env  README.md  compose.yml  package.json  pnpm-lock.yaml
web-semantic-explorer/backend/: Dockerfile  README.md  pyproject.toml
web-semantic-explorer/backend/app/: main.py  models.py  (+3 more)
web-semantic-explorer/frontend/: Dockerfile  Dockerfile.dev  README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml
(+348 files in other folders)
