[project]
name = "scrapper"
version = "0.1.0"
description = "Scrapper dependencies"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "brotli>=1.2.0",
    "hdbscan>=0.8.42",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "sqlmodel>=0.0.37",
    "umap-learn>=0.5.11",
]
